homelab/ai-platform/network-policies/turnstone-allow-dns-egress.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: turnstone-allow-dns-egress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: turnstone
      app.kubernetes.io/instance: turnstone
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
