homelab/ai-platform/network-policies/turnstone-allow-gateway-ingress.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: turnstone-allow-gateway-ingress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: turnstone
      app.kubernetes.io/instance: turnstone
      app.kubernetes.io/component: console
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: traefik-traefik
            app.kubernetes.io/name: traefik
            io.kubernetes.pod.namespace: traefik
      toPorts:
        - ports:
            - port: "8090"
              protocol: TCP
